--- a/PizzaApp/PizzaApp/Base.lproj/Main.storyboard
+++ b/PizzaApp/PizzaApp/Base.lproj/Main.storyboard
@@ -3,6 +3,7 @@
     <device id="retina6_12" orientation="portrait" appearance="light"/>
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="21678"/>
+        <capability name="Named colors" minToolsVersion="9.0"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
@@ -26,7 +27,7 @@
             </objects>
             <point key="canvasLocation" x="486" y="-94"/>
         </scene>
-        <!--Root View Controller-->
+        <!--Участники проекта-->
         <scene sceneID="QsO-ST-EjA">
             <objects>
                 <tableViewController id="nKg-1B-zQT" customClass="ParticipantsTableViewController" customModule="PizzaApp" customModuleProvider="target" sceneMemberID="viewController">
@@ -43,7 +44,7 @@
                                     <autoresizingMask key="autoresizingMask"/>
                                 </tableViewCellContentView>
                                 <connections>
-                                    <segue destination="Rt7-WM-bM3" kind="show" id="FzZ-tc-ojv"/>
+                                    <segue destination="Rt7-WM-bM3" kind="show" identifier="ShowPersonInfoSegue" id="FzZ-tc-ojv"/>
                                 </connections>
                             </tableViewCell>
                         </prototypes>
@@ -53,36 +54,79 @@
                         </connections>
                     </tableView>
                     <toolbarItems/>
-                    <navigationItem key="navigationItem" title="Root View Controller" id="IMP-KK-VxZ"/>
+                    <navigationItem key="navigationItem" title="Участники проекта" id="IMP-KK-VxZ"/>
                     <simulatedToolbarMetrics key="simulatedBottomBarMetrics"/>
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="vHQ-wP-hJl" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="3509" y="689"/>
         </scene>
-        <!--View Controller-->
+        <!--Информация-->
         <scene sceneID="tVL-x0-WQY">
             <objects>
-                <viewController id="Rt7-WM-bM3" sceneMemberID="viewController">
+                <viewController id="Rt7-WM-bM3" customClass="ParticipantViewController" customModule="PizzaApp" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="jrd-s4-rdK">
                         <rect key="frame" x="0.0" y="0.0" width="393" height="852"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <stackView opaque="NO" contentMode="scaleToFill" alignment="center" spacing="40" translatesAutoresizingMaskIntoConstraints="NO" id="aXq-4Z-onL">
+                                <rect key="frame" x="16" y="187" width="361" height="153"/>
+                                <subviews>
+                                    <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="50" translatesAutoresizingMaskIntoConstraints="NO" id="UfY-aA-eTE">
+                                        <rect key="frame" x="0.0" y="31.33333333333335" width="100" height="90.666666666666686"/>
+                                        <subviews>
+                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" verticalCompressionResistancePriority="751" text="Name" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="IqT-lc-3Bc">
+                                                <rect key="frame" x="0.0" y="0.0" width="100" height="20.333333333333332"/>
+                                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                <nil key="textColor"/>
+                                                <nil key="highlightedColor"/>
+                                            </label>
+                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Job Title" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="N7h-Yj-UEp">
+                                                <rect key="frame" x="0.0" y="70.333333333333343" width="100" height="20.333333333333329"/>
+                                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                <nil key="textColor"/>
+                                                <nil key="highlightedColor"/>
+                                            </label>
+                                        </subviews>
+                                        <constraints>
+                                            <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="100" id="6k2-UN-W1X"/>
+                                        </constraints>
+                                    </stackView>
+                                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="hTH-HD-k3m">
+                                        <rect key="frame" x="140" y="39" width="221" height="75"/>
+                                    </imageView>
+                                </subviews>
+                            </stackView>
+                        </subviews>
                         <viewLayoutGuide key="safeArea" id="BYE-LT-20A"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <constraints>
+                            <constraint firstItem="BYE-LT-20A" firstAttribute="trailing" secondItem="aXq-4Z-onL" secondAttribute="trailing" constant="16" id="9xr-Ox-Qcg"/>
+                            <constraint firstItem="aXq-4Z-onL" firstAttribute="leading" secondItem="BYE-LT-20A" secondAttribute="leading" constant="16" id="LnB-EI-AcH"/>
+                            <constraint firstItem="BYE-LT-20A" firstAttribute="bottom" secondItem="aXq-4Z-onL" secondAttribute="bottom" constant="380" id="N96-R1-gaQ"/>
+                            <constraint firstItem="aXq-4Z-onL" firstAttribute="top" secondItem="BYE-LT-20A" secondAttribute="top" constant="32" id="WvO-u5-ZQR"/>
+                        </constraints>
                     </view>
-                    <navigationItem key="navigationItem" id="KbQ-gq-rk1"/>
+                    <navigationItem key="navigationItem" title="Информация" id="KbQ-gq-rk1"/>
+                    <connections>
+                        <outlet property="jobTitleLabel" destination="N7h-Yj-UEp" id="NyN-Ib-H5m"/>
+                        <outlet property="nameLabel" destination="IqT-lc-3Bc" id="PjO-hQ-4Ac"/>
+                        <outlet property="photoImageView" destination="hTH-HD-k3m" id="BQ3-qW-ulK"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="e5X-mf-UCu" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="4593" y="689"/>
         </scene>
-        <!--Item-->
+        <!--Контакты-->
         <scene sceneID="M3N-B0-n0u">
             <objects>
                 <navigationController id="ooi-RJ-4TX" sceneMemberID="viewController">
-                    <tabBarItem key="tabBarItem" title="Item" id="ATL-fh-lRO"/>
-                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="TnJ-Lu-tam">
-                        <rect key="frame" x="0.0" y="59" width="393" height="44"/>
+                    <tabBarItem key="tabBarItem" title="Контакты" image="person.circle.fill" catalog="system" id="ATL-fh-lRO">
+                        <color key="badgeColor" name="AccentColor"/>
+                    </tabBarItem>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" largeTitles="YES" id="TnJ-Lu-tam">
+                        <rect key="frame" x="0.0" y="59" width="393" height="96"/>
                         <autoresizingMask key="autoresizingMask"/>
                     </navigationBar>
                     <connections>
@@ -93,7 +137,7 @@
             </objects>
             <point key="canvasLocation" x="2091" y="689"/>
         </scene>
-        <!--Root View Controller-->
+        <!--Список ингредиентов-->
         <scene sceneID="ZtZ-G0-PYL">
             <objects>
                 <tableViewController id="70i-dd-nsO" customClass="PizzaTableViewController" customModule="PizzaApp" customModuleProvider="target" sceneMemberID="viewController">
@@ -120,7 +164,7 @@
                         </connections>
                     </tableView>
                     <toolbarItems/>
-                    <navigationItem key="navigationItem" title="Root View Controller" id="gic-ft-Fgs"/>
+                    <navigationItem key="navigationItem" title="Список ингредиентов" id="gic-ft-Fgs"/>
                     <simulatedToolbarMetrics key="simulatedBottomBarMetrics"/>
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="h56-0w-Jla" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
@@ -171,13 +215,15 @@
             </objects>
             <point key="canvasLocation" x="812.97709923664115" y="688.73239436619724"/>
         </scene>
-        <!--Item-->
+        <!--Пиццы-->
         <scene sceneID="7k9-3m-kNW">
             <objects>
                 <navigationController id="mZX-wf-chl" sceneMemberID="viewController">
-                    <tabBarItem key="tabBarItem" title="Item" id="ade-Ko-BDo"/>
-                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="xFT-0B-WAD">
-                        <rect key="frame" x="0.0" y="59" width="393" height="44"/>
+                    <tabBarItem key="tabBarItem" title="Пиццы" image="circlebadge.2.fill" catalog="system" id="ade-Ko-BDo" userLabel="Pizza">
+                        <color key="badgeColor" name="AccentColor"/>
+                    </tabBarItem>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" largeTitles="YES" id="xFT-0B-WAD">
+                        <rect key="frame" x="0.0" y="59" width="393" height="96"/>
                         <autoresizingMask key="autoresizingMask"/>
                     </navigationBar>
                     <connections>
@@ -190,6 +236,11 @@
         </scene>
     </scenes>
     <resources>
+        <image name="circlebadge.2.fill" catalog="system" width="128" height="92"/>
+        <image name="person.circle.fill" catalog="system" width="128" height="123"/>
+        <namedColor name="AccentColor">
+            <color red="0.0" green="0.46000000000000002" blue="0.89000000000000001" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </namedColor>
         <systemColor name="systemBackgroundColor">
             <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
         </systemColor>
